# mlops

./: random_forest_model.ipynb
module2/: .env  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py
module2_organized/: Makefile  pyproject.toml
module2_organized/src/: runner.py
module2_organized/src/config/: .env  config.py
module2_organized/src/db/: db_model.py
module2_organized/src/model/: model_service.py
module2_organized/src/model/pipeline/: collection.py  model.py  preparation.py
poetry_test/: give_time.py  pyproject.toml
