[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["harshvc91 <116171382+harshvc91@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
